# fastapi-nocodb

./: .gitignore  LICENSE  README.md  pyproject.toml  secrets.tpl.toml  settings.toml
project/: __main__.py  config.py  log.py  model.py  server.py
templates/: base.html.jinja2  index.html.jinja2
