[project]
name = "project"
authors = [
    {name = "NAME", email = "NAME@example.com"}
]
description = "DESCRIPTION"
version = "0.1.0"
dependencies = [
    "click",
    "fastapi",
    "Jinja2",
    "nocodb>=2.0.0a2",
    "uvicorn",
    "pydantic",
    "typed-settings",
    "typer",
]

[tool.setuptools]
packages = ["project"]

[project.scripts]
project = "project:__main__.app"